[tool.poetry]
name = "ucar-top-doer"
version = "0.1.0"
description = "тестовое задание"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg = { version = "^3.1.0", extras = ["binary"] }
loguru = "^0.7.3"
pytest = "^8.2.0"
pytest-asyncio = "^1.2.0"
httpx = "0.27.2"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"